[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/Tools/RX/RX Prescription.png" type="Texture" id=1]
[ext_resource path="res://Tools/RX/RXForm.gd" type="Script" id=2]
[ext_resource path="res://Assets/Tools/RX/Red Capsule.png" type="Texture" id=3]
[ext_resource path="res://Assets/Tools/RX/Amuro Ray.png" type="Texture" id=4]

[node name="RXForm" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="PatientName" type="Sprite" parent="."]
position = Vector2( 139.818, -352.864 )
texture = ExtResource( 4 )

[node name="Drug" type="Sprite" parent="."]
position = Vector2( -10.9547, 100.59 )
texture = ExtResource( 3 )

[node name="topLeft" type="Position2D" parent="."]
position = Vector2( -126.135, 417.085 )

[node name="bottomRight" type="Position2D" parent="."]
position = Vector2( 334.677, 534.81 )
